--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0",
-        "orchestra/testbench": "^5.0|^6.0",
-        "doctrine/dbal": "^2.9"
+        "orchestra/testbench": "^5.0|^6.0"
     },
     "autoload": {
         "psr-4": {
